--- a/projekty.html
+++ b/projekty.html
@@ -19,7 +19,20 @@
     <section class="gallery">
       <h2>Our Projects</h2>
       <div class="images">
-        <img src="images/project1.jpg" alt="Project 1" /><img src="images/project2.jpg" alt="Project 2" /><img src="images/project3.jpg" alt="Project 3" /><img src="images/project4.jpg" alt="Project 4" /><img src="images/project5.jpg" alt="Project 5" /><img src="images/project6.jpg" alt="Project 6" />
+        <img src="images/project1.jpg" alt="Project 1" />
+        <img src="images/project2.jpg" alt="Project 2" />
+        <img src="images/project3.jpg" alt="Project 3" />
+        <img src="images/project4.jpg" alt="Project 4" />
+        <img src="images/project5.jpg" alt="Project 5" />
+        <img src="images/project6.jpg" alt="Project 6" />
+        <img src="images/project7.jpg" alt="Project 7" />
+        <img src="images/project8.jpg" alt="Project 8" />
+        <img src="images/project9.jpg" alt="Project 9" />
+        <img src="images/project10.jpg" alt="Project 10" />
+        <img src="images/project11.jpg" alt="Project 11" />
+        <img src="images/project12.jpg" alt="Project 12" />
+        <img src="images/project13.jpg" alt="Project 13" />
+        <img src="images/project14.jpg" alt="Project 14" />
       </div>
     </section>
   </main>
