Index and style update

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lucas Contracting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lucas Contracting - Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,12 +15,22 @@
       <a href="kontakt.html">Contact</a>
     </nav>
   </header>
+  
   <main>
     <section class="welcome">
-      <h2>Welcome</h2>
-      <p>Lucas Contracting is a small, trusted construction company based in the USA. We specialize in building custom homes and high-quality home additions, serving clients with professionalism and attention to detail.</p>
+      <h2>Welcome to Lucas Contracting</h2>
+      <p>
+        At Lucas Contracting, we believe that your home should be more than just a place to live — it should be a reflection of your vision, built with craftsmanship, care, and lasting quality. With over a decade of experience in the construction industry, our team specializes in custom home building, full-scale renovations, and high-quality additions throughout New Jersey and the surrounding areas.
+      </p>
+      <p>
+        Whether you're planning to build your dream home from the ground up or expand your existing space with a seamless home addition, Lucas Contracting is your trusted partner from concept to completion. We work closely with each client to ensure every project is delivered on time, within budget, and above expectations.
+      </p>
+      <p>
+        Discover the difference of working with a team that values integrity, precision, and customer satisfaction above all. Welcome to Lucas Contracting — where quality meets reliability.
+      </p>
     </section>
   </main>
+
   <footer>
     &copy; 2025 Lucas Contracting
   </footer>
