--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
       <a href="kontakt.html">Contact</a>
     </nav>
   </header>
-  
+
   <main>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Lucas Contracting</h1>
+        <p>Building your dream home with craftsmanship and care</p>
+        <a href="projekty.html" class="btn">See Our Projects</a>
+      </div>
+    </section>
+
     <section class="welcome">
       <h2>Welcome to Lucas Contracting</h2>
       <p>
