--- a/projekty.html
+++ b/projekty.html
@@ -1,43 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Projects - Lucas Contracting</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>Lucas Contracting</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projekty.html">Projects</a>
-      <a href="kontakt.html">Contact</a>
-    </nav>
-  </header>
-  <main>
-    <section class="gallery">
-      <h2>Our Projects</h2>
-      <div class="images">
-        <img src="images/project1.jpeg" alt="Project 1" />
-        <img src="images/project2.jpeg" alt="Project 2" />
-        <img src="images/project3.jpeg" alt="Project 3" />
-        <img src="images/project4.jpeg" alt="Project 4" />
-        <img src="images/project5.jpeg" alt="Project 5" />
-        <img src="images/project6.jpeg" alt="Project 6" />
-        <img src="images/project7.jpeg" alt="Project 7" />
-        <img src="images/project8.jpeg" alt="Project 8" />
-        <img src="images/project9.jpeg" alt="Project 9" />
-        <img src="images/project10.jpeg" alt="Project 10" />
-        <img src="images/project11.jpeg" alt="Project 11" />
-        <img src="images/project12.jpeg" alt="Project 12" />
-        <img src="images/project13.jpeg" alt="Project 13" />
-        <img src="images/project14.jpeg" alt="Project 14" />
-      </div>
-    </section>
-  </main>
-  <footer>
-    &copy; 2025 Lucas Contracting
-  </footer>
-</body>
-</html>
+<section class="gallery">
+  <h2>Our Projects</h2>
+
+  <div class="project">
+    <h3>Project 1</h3>
+    <div class="images">
+      <img src="images/project1.jpeg" alt="Project 1A" />
+      <img src="images/project2.jpeg" alt="Project 1B" />
+      <img src="images/project3.jpeg" alt="Project 1C" />
+      <img src="images/project4.jpeg" alt="Project 1D" />
+    </div>
+  </div>
+
+  <div class="project">
+    <h3>Project 2</h3>
+    <div class="images">
+      <img src="images/project5.jpeg" alt="Project 2A" />
+      <img src="images/project6.jpeg" alt="Project 2B" />
+      <img src="images/project7.jpeg" alt="Project 2C" />
+      <img src="images/project8.jpeg" alt="Project 2D" />
+    </div>
+  </div>
+
+  <div class="project">
+    <h3>Project 3</h3>
+    <div class="images">
+      <img src="images/project9.jpeg" alt="Project 3A" />
+      <img src="images/project10.jpeg" alt="Project 3B" />
+    </div>
+  </div>
+
+  <div class="project">
+    <h3>Project 4</h3>
+    <div class="images">
+      <img src="images/project11.jpeg" alt="Project 4A" />
+      <img src="images/project12.jpeg" alt="Project 4B" />
+      <img src="images/project13.jpeg" alt="Project 4C" />
+      <img src="images/project14.jpeg" alt="Project 4D" />
+    </div>
+  </div>
+
+</section>
