--- a/projekty.html
+++ b/projekty.html
@@ -103,7 +103,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Lucas Contracting
+    &copy; 2025 Lucas Contracting.
   </footer>
 
   <!-- Lightbox modal -->
