--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lucas Contracting - Home</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,28 +16,19 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Lucas Contracting</h1>
-        <p>Building your dream home with craftsmanship and care</p>
-        <a href="projekty.html" class="btn">See Our Projects</a>
-      </div>
-    </section>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Building Dreams with Precision</h1>
+      <p>From full-scale house construction to detailed additions — we deliver quality and trust.</p>
+      <a href="projekty.html" class="btn">View Our Work</a>
+    </div>
+  </section>
 
-    <section class="welcome">
-      <h2>Welcome to Lucas Contracting</h2>
-      <p>
-        At Lucas Contracting, we believe that your home should be more than just a place to live — it should be a reflection of your vision, built with craftsmanship, care, and lasting quality. With over a decade of experience in the construction industry, our team specializes in custom home building, full-scale renovations, and high-quality additions throughout New Jersey and the surrounding areas.
-      </p>
-      <p>
-        Whether you're planning to build your dream home from the ground up or expand your existing space with a seamless home addition, Lucas Contracting is your trusted partner from concept to completion. We work closely with each client to ensure every project is delivered on time, within budget, and above expectations.
-      </p>
-      <p>
-        Discover the difference of working with a team that values integrity, precision, and customer satisfaction above all. Welcome to Lucas Contracting — where quality meets reliability.
-      </p>
-    </section>
-  </main>
+  <section class="welcome">
+    <h2>Welcome to Lucas Contracting</h2>
+    <p>Lucas Contracting is a small, family-owned construction company based in New Jersey. We specialize in building custom homes, additions, and renovations. With a focus on craftsmanship, transparency, and reliability, we help our clients bring their vision to life — on time and within budget.</p>
+    <p>Whether you're expanding your living space or building from the ground up, we're here to guide you every step of the way.</p>
+  </section>
 
   <footer>
     &copy; 2025 Lucas Contracting
