--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,17 @@
       <p><strong>Email:</strong> example@gmail.com</p>
       <p><strong>Address:</strong> NJ 1 Clark</p>
     </section>
+
+    <section class="map">
+      <h2>Our Location</h2>
+      <div class="map-container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.050775816048!2d-74.31579992407656!3d40.62077464551256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3b7e70d23e41f%3A0x2216bd8d6b926f8b!2sClark%2C%20NJ%2007066%2C%20USA!5e0!3m2!1sen!2spl!4v1720356308124!5m2!1sen!2spl"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
   </main>
   <footer>
     &copy; 2025 Lucas Contracting
