--- a/projekty.html
+++ b/projekty.html
@@ -50,6 +50,66 @@
         </div>
       </div>
 
+      <div class="project">
+          <h3>Project 2</h3>
+          <div class="images">
+            <div class="image-item">
+              <a href="images/project5.jpeg" target="_blank">
+                <img src="images/project5.jpeg" alt="Project 2A" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project6.jpeg" target="_blank">
+                <img src="images/project6.jpeg" alt="Project 2B" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project7.jpeg" target="_blank">
+                <img src="images/project7.jpeg" alt="Project 2C" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project8.jpeg" target="_blank">
+                <img src="images/project8.jpeg" alt="Project 2D" />
+              </a>
+              <p>Example of description</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="project">
+          <h3>Project 3</h3>
+          <div class="images">
+            <div class="image-item">
+              <a href="images/project9.jpeg" target="_blank">
+                <img src="images/project9.jpeg" alt="Project 3A" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project9.jpeg" target="_blank">
+                <img src="images/project9.jpeg" alt="Project 3B" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project10.jpeg" target="_blank">
+                <img src="images/project10.jpeg" alt="Project 3C" />
+              </a>
+              <p>Example of description</p>
+            </div>
+            <div class="image-item">
+              <a href="images/project11.jpeg" target="_blank">
+                <img src="images/project11.jpeg" alt="Project 3D" />
+              </a>
+              <p>Example of description</p>
+            </div>
+          </div>
+        </div>
+
       <!-- Dodaj inne projekty analogicznie jak wyżej -->
     </section>
   </main>
