--- a/kontakt.html
+++ b/kontakt.html
@@ -18,9 +18,11 @@
   <main>
     <section class="contact">
       <h2>Contact Us</h2>
-      <p><strong>Phone:</strong> 11223344</p>
-      <p><strong>Email:</strong> example@gmail.com</p>
-      <p><strong>Address:</strong> NJ 1 Clark</p>
+      <div class="contact-box">
+        <p><strong>📞 Phone:</strong> 112 233 44</p>
+        <p><strong>✉️ Email:</strong> <a href="mailto:example@gmail.com">example@gmail.com</a></p>
+        <p><strong>📍 Address:</strong> NJ 1, Clark, New Jersey</p>
+      </div>
     </section>
 
     <section class="map">
