--- a/projekty.html
+++ b/projekty.html
@@ -18,7 +18,7 @@
 
   <main>
     <section class="gallery">
-      <h2>Our Projects</h2>
+      <h2 class="section-title">Our Projects</h2>
 
       <div class="project">
         <h3>Project 1</h3>
