--- a/projekty.html
+++ b/projekty.html
@@ -21,96 +21,141 @@
       <h2 class="section-title">Our Projects</h2>
 
       <div class="project">
-        <h3>Project 1</h3>
+        <h3>New construction house in Linden</h3>
         <div class="images">
           <div class="image-item">
-            <a href="images/project1.jpeg" target="_blank">
-              <img src="images/project1.jpeg" alt="Project 1A" />
+            <a href="images/BokCzarneDrewno.jpeg" target="_blank">
+              <img src="images/BokCzarneDrewno.jpeg" alt="Elevation" />
             </a>
-            <p>Example of description</p>
+            <p>Elevation</p>
           </div>
           <div class="image-item">
-            <a href="images/project2.jpeg" target="_blank">
-              <img src="images/project2.jpeg" alt="Project 1B" />
+            <a href="images/HallwayCD.jpeg" target="_blank">
+              <img src="images/HallwayCD.jpeg" alt="Main Hallway" />
             </a>
-            <p>Example of description</p>
+            <p>Main Hallway</p>
           </div>
           <div class="image-item">
-            <a href="images/project3.jpeg" target="_blank">
-              <img src="images/project3.jpeg" alt="Project 1C" />
+            <a href="images/KuchniaCD.jpeg" target="_blank">
+              <img src="images/KuchniaCD.jpeg" alt="Kitchen" />
             </a>
-            <p>Example of description</p>
+            <p>Kitchen</p>
           </div>
           <div class="image-item">
-            <a href="images/project4.jpeg" target="_blank">
-              <img src="images/project4.jpeg" alt="Project 1D" />
+            <a href="images/MasterBedroomCD.jpeg" target="_blank">
+              <img src="images/MasterBedroomCD.jpeg" alt="Master Bedroom" />
             </a>
-            <p>Example of description</p>
+            <p>Master Bedroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/BathCD.jpeg" target="_blank">
+              <img src="images/BathCD.jpeg" alt="Bathroom" />
+            </a>
+            <p>Bathroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/DinningCD.jpeg" target="_blank">
+              <img src="images/DinningCD.jpeg" alt="Dinning Room" />
+            </a>
+            <p>Dinning Room</p>
+          </div>
+          <div class="image-item">
+            <a href="images/KuchniaCD2.jpeg" target="_blank">
+              <img src="images/KuchniaCD2.jpeg" alt="Kitchen" />
+            </a>
+            <p>Kitchen</p>
+          </div>
+          <div class="image-item">
+            <a href="images/MasterBathCD.jpeg" target="_blank">
+              <img src="images/MasterBathCD.jpeg" alt="Master Bathroom" />
+            </a>
+            <p>Master Bathroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/Basement.jpeg" target="_blank">
+              <img src="images/Basement.jpeg" alt="Basement" />
+            </a>
+            <p>Basement</p>
+          </div>
+          <div class="image-item">
+            <a href="images/BasementBathroomCD.jpeg" target="_blank">
+              <img src="images/BasementBathroomCD.jpeg" alt="Basement Bathroom" />
+            </a>
+            <p>Basement Bathroom</p>
           </div>
         </div>
       </div>
-
       <div class="project">
-          <h3>Project 2</h3>
-          <div class="images">
-            <div class="image-item">
-              <a href="images/project5.jpeg" target="_blank">
-                <img src="images/project5.jpeg" alt="Project 2A" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project6.jpeg" target="_blank">
-                <img src="images/project6.jpeg" alt="Project 2B" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project7.jpeg" target="_blank">
-                <img src="images/project7.jpeg" alt="Project 2C" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project8.jpeg" target="_blank">
-                <img src="images/project8.jpeg" alt="Project 2D" />
-              </a>
-              <p>Example of description</p>
-            </div>
+        <h3>New Construction in Clark</h3>
+        <div class="images">
+          <div class="image-item">
+            <a href="images/FrontPodjazd.jpeg" target="_blank">
+              <img src="images/FrontPodjazd.jpeg" alt="Front" />
+            </a>
+            <p>Front</p>
+          </div>
+          <div class="image-item">
+            <a href="images/LivingRoomPodjazd.jpeg" target="_blank">
+              <img src="images/LivingRoomPodjazd.jpeg" alt="Living Room" />
+            </a>
+            <p>Living Room</p>
+          </div>
+          <div class="image-item">
+            <a href="images/KitchenPodjazd.jpeg" target="_blank">
+              <img src="images/KitchenPodjazd.jpeg" alt="Kitchen" />
+            </a>
+            <p>Kitchen</p>
+          </div>
+          <div class="image-item">
+            <a href="images/MasterBedroomPodjazd.jpeg" target="_blank">
+              <img src="images/MasterBedroomPodjazd.jpeg" alt="Master Bedroom" />
+            </a>
+            <p>Master Bedroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/BathroomPojazd.jpeg" target="_blank">
+              <img src="images/BathroomPojazd.jpeg" alt="Bathroom" />
+            </a>
+            <p>Bathroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/DinningRoomPodjazd.jpeg" target="_blank">
+              <img src="images/DinningRoomPodjazd.jpeg" alt="Dinning Room" />
+            </a>
+            <p>Dinning Room</p>
+          </div>
+          <div class="image-item">
+            <a href="images/BathroomMasterPodjazd.jpeg" target="_blank">
+              <img src="images/BathroomMasterPodjazd.jpeg" alt="Bathroom Master" />
+            </a>
+            <p>Bathroom Master</p>
+          </div>
+          <div class="image-item">
+            <a href="images/BasementPodjazd.jpeg" target="_blank">
+              <img src="images/BasementPodjazd.jpeg" alt="Basement" />
+            </a>
+            <p>Basement</p>
+          </div>
+          <div class="image-item">
+            <a href="images/Bathroom2Pojazd.jpeg" target="_blank">
+              <img src="images/Bathroom2Pojazd.jpeg" alt="Bathroom" />
+            </a>
+            <p>Bathroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/Bathroom3Pojdazd.jpeg" target="_blank">
+              <img src="images/Bathroom3Pojdazd.jpeg" alt="Bathroom" />
+            </a>
+            <p>Bathroom</p>
+          </div>
+          <div class="image-item">
+            <a href="images/bathroom4Pojdazd.jpeg" target="_blank">
+              <img src="images/bathroom4Pojdazd.jpeg" alt="Bathroom" />
+            </a>
+            <p>Bathroom</p>
           </div>
         </div>
-
-        <div class="project">
-          <h3>Project 3</h3>
-          <div class="images">
-            <div class="image-item">
-              <a href="images/project9.jpeg" target="_blank">
-                <img src="images/project9.jpeg" alt="Project 3A" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project9.jpeg" target="_blank">
-                <img src="images/project9.jpeg" alt="Project 3B" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project10.jpeg" target="_blank">
-                <img src="images/project10.jpeg" alt="Project 3C" />
-              </a>
-              <p>Example of description</p>
-            </div>
-            <div class="image-item">
-              <a href="images/project11.jpeg" target="_blank">
-                <img src="images/project11.jpeg" alt="Project 3D" />
-              </a>
-              <p>Example of description</p>
-            </div>
-          </div>
-        </div>
-
-      <!-- Dodaj inne projekty analogicznie jak wyżej -->
+      </div>
     </section>
   </main>
 
