--- a/kontakt.html
+++ b/kontakt.html
@@ -19,9 +19,9 @@
     <section class="contact">
       <h2>Contact Us</h2>
       <div class="contact-box">
-        <p><strong>📞 Phone:</strong> 112 233 44</p>
-        <p><strong>✉️ Email:</strong> <a href="mailto:example@gmail.com">example@gmail.com</a></p>
-        <p><strong>📍 Address:</strong> NJ 1, Clark, New Jersey</p>
+        <p><strong>📞 Phone:</strong> +1 (908) 838 5778</p>
+        <p><strong>✉️ Email:</strong> <a href="mailto:lucascontracting2024@gmail.com">lucascontracting2024@gmail.com</a></p>
+        <p><strong>📍 Address:</strong> Clark, New Jersey</p>
       </div>
     </section>
 
