Add new projects and rename files to English
- Added new projects: Clark remodeling, Harrison remodeling, Montague construction
- Added videos to Clark and Harrison projects
- Renamed files: kontakt.html -> contact.html, projekty.html -> projects.html
- Updated all internal links to use new file names
- Added video styling to match image dimensions

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <h1>Lucas Contracting</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="projekty.html">Projects</a>
-      <a href="kontakt.html">Contact</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
