--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Lucas Contracting</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="projekty.html">Projects</a>
-      <a href="kontakt.html">Contact</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -20,7 +20,7 @@
     <div class="hero-text">
       <h1>Building Dreams with Precision</h1>
       <p>From full-scale house construction to detailed additions — we deliver quality and trust.</p>
-      <a href="projekty.html" class="btn">View Our Work</a>
+      <a href="projects.html" class="btn">View Our Work</a>
     </div>
   </section>
 
