--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
             <a href="images/Clark/CMain.jpg" target="_blank">
               <img src="images/Clark/CMain.jpg" alt="Living Room" />
             </a>
-            <p>Main Area</p>
+            <p>Living Room</p>
           </div>
           <div class="image-item">
             <a href="images/Clark/CBathroom.jpg" target="_blank">
@@ -208,7 +208,7 @@
             <a href="images/Clark/CDinningKitchen.jpg" target="_blank">
               <img src="images/Clark/CDinningKitchen.jpg" alt="Dining Room" />
             </a>
-            <p>Dining Kitchen</p>
+            <p>Dining</p>
           </div>
         </div>
       </div>
@@ -232,19 +232,19 @@
             <a href="images/Harrison/HWIP2.jpg" target="_blank">
               <img src="images/Harrison/HWIP2.jpg" alt="Work in Progress" />
             </a>
-            <p>Work in Progress 2</p>
+            <p>Work in Progress</p>
           </div>
           <div class="image-item">
             <a href="images/Harrison/HWIP3.jpg" target="_blank">
               <img src="images/Harrison/HWIP3.jpg" alt="Work in Progress" />
             </a>
-            <p>Work in Progress 3</p>
+            <p>Work in Progress</p>
           </div>
           <div class="image-item">
             <a href="images/Harrison/HWIP4.jpg" target="_blank">
               <img src="images/Harrison/HWIP4.jpg" alt="Work in Progress" />
             </a>
-            <p>Work in Progress 4</p>
+            <p>Work in Progress</p>
           </div>
           <div class="image-item">
             <video controls>
@@ -275,13 +275,13 @@
             <a href="images/Montague/MKitchen2.jpg" target="_blank">
               <img src="images/Montague/MKitchen2.jpg" alt="Kitchen" />
             </a>
-            <p>Kitchen 2</p>
+            <p>Kitchen</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MKitDin.jpg" target="_blank">
               <img src="images/Montague/MKitDin.jpg" alt="Kitchen" />
             </a>
-            <p>Kitchen Dining</p>
+            <p>Kitchen</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MDinning.jpg" target="_blank">
@@ -293,7 +293,7 @@
             <a href="images/Montague/MDinning2.jpg" target="_blank">
               <img src="images/Montague/MDinning2.jpg" alt="Dining Room" />
             </a>
-            <p>Dining Room 2</p>
+            <p>Dining Room</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MRoom.jpg" target="_blank">
@@ -305,7 +305,7 @@
             <a href="images/Montague/Mroom2.jpg" target="_blank">
               <img src="images/Montague/Mroom2.jpg" alt="Room" />
             </a>
-            <p>Room 2</p>
+            <p>Room</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MBath.jpg" target="_blank">
@@ -317,19 +317,19 @@
             <a href="images/Montague/mbathroom.jpg" target="_blank">
               <img src="images/Montague/mbathroom.jpg" alt="Bathroom" />
             </a>
-            <p>Bathroom 2</p>
+            <p>Bathroom</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MBathroom2.jpg" target="_blank">
               <img src="images/Montague/MBathroom2.jpg" alt="Bathroom" />
             </a>
-            <p>Bathroom 3</p>
+            <p>Bathroom</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/Mbathroom3.jpg" target="_blank">
               <img src="images/Montague/Mbathroom3.jpg" alt="Bathroom" />
             </a>
-            <p>Bathroom 4</p>
+            <p>Bathroom</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MMHallway.jpg" target="_blank">
@@ -347,7 +347,7 @@
             <a href="images/Montague/Mbasement2.jpg" target="_blank">
               <img src="images/Montague/Mbasement2.jpg" alt="Basement" />
             </a>
-            <p>Basement 2</p>
+            <p>Basement</p>
           </div>
           <div class="image-item">
             <a href="images/Montague/MLaundry.jpg" target="_blank">
