--- a/projects.html
+++ b/projects.html
@@ -214,7 +214,7 @@
       </div>
 
       <div class="project">
-        <h3>Remodeling in Harrison</h3>
+        <h3>Remodeling in Westfield</h3>
         <div class="images">
           <div class="image-item">
             <a href="images/Harrison/HBefore.jpg" target="_blank">
@@ -257,7 +257,7 @@
       </div>
 
       <div class="project">
-        <h3>New construction house in Montague</h3>
+        <h3>New construction house in Scotch Plains</h3>
         <div class="images">
           <div class="image-item">
             <a href="images/Montague/MElevation.jpg" target="_blank">
